# bvh_research

./: .gitattributes  .gitignore  Cargo.toml  Denoiser.lib  OpenImageDenoise.exp  OpenImageDenoise.ilk  OpenImageDenoise.lib  OpenImageDenoise_core.exp  OpenImageDenoise_core.lib  OpenImageDenoise_device_cpu.exp  OpenImageDenoise_device_cpu.lib  OpenImageDenoise_device_cuda.lib  OpenImageDenoise_utils.lib
assets/: ray_accumulator.comp  ray_accumulator.comp.spv  ray_gen.comp  ray_gen.comp.spv  ray_intersector.comp  ray_intersector.comp.spv  ray_shader.comp  ray_shader.comp.spv  traverse_bttm_level.comp  traverse_bttm_level.comp.spv  types.glsl
example_shaders/: random.glsl  ray_gen.glsl  ray_shader.glsl
examples/: cpu.rs  gpu.rs  material_compiler.rs
intersect/: Cargo.toml  build.rs
intersect/assets/: ray_accumulator.comp  ray_accumulator.comp.spv  ray_gen.comp  ray_intersector.comp  ray_intersector.comp.spv  ray_shader.comp  ray_uber_shader.comp  ray_uber_shader.comp.spv
intersect/example_shaders/: closest_hit.glsl  random.glsl  (+2 more)
libraytracer/: Cargo.toml
src/: acc_bvh_midpoint_split.rs  acceleration_structure.rs  blas.rs  bottom_level_acceleration_structure.rs  brute_force.rs  bvh.rs  camera.rs  cube.rs  frame_buffer.rs  gpu_acceleration_structure.rs  gpu_blas.rs  gpu_intersector.rs  gpu_ray_accumulator.rs  gpu_ray_generator.rs  gpu_ray_intersector.rs  gpu_ray_shader.rs  intersect.rs  lib.rs  main.rs  mesh.rs  ray_generator.rs  top_level_acceleration_structure.rs  trace.rs  types.rs  vec3.rs  vec4.rs
tracey/: Cargo.toml
tracey_utils/: Cargo.toml
(+120 files in other folders)
