[package]
name = "gpu_tracer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "gpu_tracer"
path = "src/lib.rs"

[dependencies]
image="*"
rayon="*"
crossbeam="*"
nalgebra-glm = "0.3"
rand = "*"
vk_utils={git = "https://github.com/DannyvanSwieten/vk_utils.git"}
noise = "*"