[package]
name = "gpu_tracer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "gpu_tracer"
path = "src/lib.rs"

[dependencies]
cgmath="*"
image="*"
rayon="*"
shaderc = "*"
vk_utils={git = "https://github.com/DannyvanSwieten/vk_utils.git"}